<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.viise.lightsearch.fragment.AuthorizationFragment"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPersonName"
            android:textSize="20sp" />
            <!--android:importantForAutofill="no"-->

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="20sp"/>
        <!--android:importantForAutofill="no"-->

        <EditText
            android:id="@+id/editTextPassword"
            android:background="@drawable/edittextshape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"/>
        <!--android:importantForAutofill="no"-->

        <CheckBox
            android:id="@+id/checkBoxSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/checkBox_settings"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHost"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/host_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextshape"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="number"
            android:text="192.168.3.215"
            android:textSize="20sp" />
        <!--android:importantForAutofill="no"-->

        <TextView
            android:id="@+id/textViewPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/port_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPort"
            android:background="@drawable/edittextshape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="50000"
            android:textSize="20sp"/>
        <!--android:importantForAutofill="no"-->

        <Button
            android:id="@+id/buttonChangePass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/buttonShadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:text="@string/buttonChPass_label"
            android:textColor="@color/buttonTextColor" />

        <Space
            android:id="@+id/spaceAuto"
            android:layout_width="match_parent"
            android:layout_height="137dp" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/buttonShadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/buttonConnect_label"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>