<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayoutCart"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCartTotalAmount"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cartTotalAmount"
            android:textColor="@color/colorChange"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCartTotalAmountDynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="5dp"
            android:text="5 шт."
            android:textColor="@color/colorChange"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCartTotalCost"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/cartTotalCost"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="35dp"
            android:text="2700000 руб."
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="17sp" />
    </FrameLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayoutCart"
        android:layout_width="400dp"
        android:layout_height="460dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/frameLayoutCart"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutCart">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recycleViewBackgroundColor"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/buttonCloseSoftCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buttonCloseSC_label"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayoutCart" />

</android.support.constraint.ConstraintLayout>